# self-mini-porject

./: pyproject.toml
app/: main.py
app/core/: base.py  config.py  security.py
app/db/: database.py
app/models/: reservation.py  room.py  room_cost.py  user.py
app/repo/: user_repo.py
app/schemas/: user.py
app/servies/: user_ser.py
app/v1/api/: admin.py  room.py  user.py
